--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,41 +1,73 @@
 apply plugin: 'com.android.application'
 
-
 android {
-    compileSdkVersion 29
+    compileSdkVersion 33
+    buildToolsVersion "30.0.3"
+    
     defaultConfig {
         applicationId "com.ibscc.bible"
-        minSdkVersion 29
-        targetSdkVersion 29
+        minSdkVersion 21
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-
+    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    
+    // Resolver conflito de arquivos duplicados
+    packagingOptions {
+        exclude 'META-INF/kotlin-stdlib.kotlin_module'
+        exclude 'META-INF/kotlin-stdlib-jdk7.kotlin_module'
+        exclude 'META-INF/kotlin-stdlib-jdk8.kotlin_module'
+        exclude 'META-INF/kotlin-stdlib-common.kotlin_module'
+    }
+}
 
-
+// Forçar mesma versão do Kotlin em todas as dependências
+configurations.all {
+    resolutionStrategy {
+        force 'org.jetbrains.kotlin:kotlin-stdlib:1.6.0'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.6.0'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.6.0'
+        force 'org.jetbrains.kotlin:kotlin-stdlib-common:1.6.0'
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    // AndroidX Core (versões antigas e estáveis)
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.core:core:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.fragment:fragment:1.4.1'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    
+    // Material Design (versão compatível)
+    implementation 'com.google.android.material:material:1.6.1'
+    
+    // Lifecycle
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.4.1'
+    
+    // Gson (JSON)
     implementation 'com.google.code.gson:gson:2.10.1'
+    
+    // Testes
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
